# GraphRAG-SDK

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .spellcheck.yml  .wordlist.txt  Architecture-Review-Suggestions.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GraphRAG-SDK-v2-Infrastructure-Blueprint.md  GraphRAG-SDK-v2-Target-Architecture.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  Merged-Indexing-Strategy-Implementation-Plan.md  README.md  ROADMAP.md  SECURITY.md  custom_metric.py  docker-compose.yml  example_single_doc.py  mkdocs.yml  ontology.json  pyproject.toml  quickstart.py  requirements.txt  style.md  template.py  test_import_mock.py  test_mock_import.py  test_patch_dict.py  test_sys_modules.py  uv.toml
graphrag_sdk/: Document.py  Makefile  README.md  __init__.py  attribute.py  chat_session.py  custom_metric.py  document.py  entity.py  entity_resolution.py  extraction_validator.py  graph_metrics.py  helpers.py  kg.py  model_config.py  ontology.py  pyproject.toml  query_graph.py  rdf_extractor.py  relation.py  source.py  template.py  test_debug.py  test_metrics.py  test_monkeypatch.py  test_monkeypatch2.py  test_monkeypatch3.py
graphrag_sdk/agents/: agent.py  kg_agent.py
graphrag_sdk/api/: main.py
graphrag_sdk/core/: __init__.py  context.py  exceptions.py  models.py  providers.py
graphrag_sdk/document_loaders/: __init__.py  csv.py  html.py  jsonl.py  pdf.py  string.py  text.py  ttl.py  url.py
graphrag_sdk/embeddings/: __init__.py  litellm.py  model.py  model_embeddings.py  openai.py
graphrag_sdk/examples/: 01_quickstart.py  02_pdf_with_schema.py  03_custom_strategies.py  04_custom_provider.py  05_notebook_demo.ipynb  06_incremental_updates.py  06_markdown_document_aware.py  07_incremental_updates.py  08_ontology_lifecycle.py  09_docling_advanced_loader.py  09_ontology_evolution.py  10_ontology_discovery.py  sample_doc.md
graphrag_sdk/fixtures/: prompts.py  regex.py
graphrag_sdk/ingestion/: pipeline.py
graphrag_sdk/ingestion/extraction_strategies/: base.py  merged_extraction.py  schema_guided.py
graphrag_sdk/ingestion/loaders/: __init__.py
graphrag_sdk/ingestion/resolution_strategies/: description_merge.py
graphrag_sdk/models/: __init__.py  azure_openai.py  gemini.py  langchain_litellm.py  litellm.py  model.py  ollama.py  openai.py  proxy.py
graphrag_sdk/orchestrator/: __init__.py  execution_plan.py  orchestrator.py  orchestrator_decision.py  orchestrator_runner.py  step.py  step_result.py
graphrag_sdk/orchestrator/steps/: __init__.py  agent.py  parallel.py  summary.py  user_input.py
graphrag_sdk/retrieval/reranking_strategies/: __init__.py
graphrag_sdk/retrieval/strategies/: __init__.py
graphrag_sdk/schema/: __init__.py  auto_detect.py  decoder.py  encoder.py  entity.py  from_graph.py  functions_gen.py  relation.py  schema.py  to_graph.py  tools_gen.py
graphrag_sdk/src/graphrag_sdk/: __init__.py
graphrag_sdk/src/graphrag_sdk/api/: __init__.py  main.py
graphrag_sdk/src/graphrag_sdk/core/: __init__.py  circuit_breaker.py  connection.py  context.py  exceptions.py  models.py  providers.py
graphrag_sdk/src/graphrag_sdk/core/providers/: __init__.py  _retry.py  _timeout.py  base.py  litellm.py  openrouter.py
graphrag_sdk/src/graphrag_sdk/data/: schema_org.json
graphrag_sdk/src/graphrag_sdk/discovery/: __init__.py  catalog.py  instructor.py  pipeline.py  prompts.py  proposal.py
graphrag_sdk/src/graphrag_sdk/ingestion/: __init__.py  backfill.py  pipeline.py
graphrag_sdk/src/graphrag_sdk/ingestion/chunking_strategies/: __init__.py  base.py  callable_chunking.py  contextual_chunking.py  fixed_size.py  llama_semantic.py  llama_semantic_double.py  llama_sentence.py  llama_topic.py  sentence_token_cap.py  structural_chunking.py
graphrag_sdk/src/graphrag_sdk/ingestion/extraction_strategies/: CorefNERLLMExtraction.py  __init__.py  _entity_utils.py  _prompts.py  base.py  coref_gliner2_extraction.py  coref_gliner_llm_extraction.py  coref_resolvers.py  entity_extractors.py  graph_extraction.py  hybrid_extraction.py  merged_extraction.py  schema_guided.py  two_step_extraction.py
graphrag_sdk/src/graphrag_sdk/ingestion/loaders/: __init__.py  base.py  csv_loader.py  docling_base.py  docling_loader.py  docx_loader.py  html_loader.py  markdown_loader.py  pdf_loader.py  pptx_loader.py  text_loader.py  xlsx_loader.py
graphrag_sdk/src/graphrag_sdk/ingestion/resolution_strategies/: __init__.py  base.py  description_merge.py  embedding_cluster.py  (+3 more)
graphrag_sdk/src/graphrag_sdk/retrieval/: __init__.py  router.py
graphrag_sdk/src/graphrag_sdk/storage/: __init__.py  deduplicator.py  graph_store.py  ontology_store.py  vector_store.py
graphrag_sdk/src/graphrag_sdk/telemetry/: __init__.py  tracer.py
graphrag_sdk/src/graphrag_sdk/utils/: __init__.py  cypher.py  graph_viz.py
graphrag_sdk/steps/: Step.py  create_ontology_step.py  extract_data_step.py  graph_query_step.py  qa_step.py  stream_qa_step.py
graphrag_sdk/storage/: __init__.py  graph_store.py  vector_store.py
graphrag_sdk/telemetry/: __init__.py
graphrag_sdk/tests/: conftest.py  test_attribute_prompt.py  test_backfill.py  test_backfill_integration.py  test_chunk_retrieval.py  test_chunking.py  test_chunking_strategies.py  test_circuit_breaker.py  test_connection.py  test_context.py  test_coref_resolvers.py  test_cosine_reranker.py  test_cypher_first.py  test_cypher_generation.py  test_cypher_sanitize.py  test_deprecations.py  test_description_merge.py  test_docling_loaders.py  test_embedding_cluster_resolution.py  test_enhanced_multi_path.py  test_entity_anchored_retrieval.py  test_entity_extractors.py  test_entity_utils.py  test_exceptions.py  test_extraction.py  test_extraction_novel_coref_gliner2.py  test_extraction_novel_coref_ner_llm.py  test_facade.py  test_graph_extraction.py  test_graph_store.py  test_graph_viz.py  test_hybrid_extraction.py  test_ingestion_e2e.py  test_integration.py  test_llm_verified_resolution.py  test_loaders.py  test_merged_extraction.py  test_models.py  test_multi_path_retrieval.py  test_ontology_discovery.py  (+21 more)
(+1032 files in other folders)
