[tool.poetry]
name = "graphrag_sdk"
version = "0.8.1"
license = "MIT"
description = "Enables graph-based RAG and integration with LLMs for advanced querying and knowledge graph creation."
authors = ["FalkorDB <info@falkordb.com>"]
readme = "README.md"
repository = "https://github.com/FalkorDB/GraphRAG-SDK"
homepage = "http://RAG-SDK.readthedocs.io"
keywords = ['RAG', 'Graph-RAG', 'KnowledgeGraph']

[tool.poetry.dependencies]
python = "^3.10.0, <3.14"
falkordb = "^1.0.9"
typing-extensions = "^4.12.1"
beautifulsoup4 = "^4.12.3"
pypdf = "^5.9.0"
backoff = "^2.2.1"
requests = "^2.32.3"
ratelimit = "^2.2.1"
python-dotenv = "^1.0.1"
fix-busted-json = "^0.0.18"
rich = "^13.9.4"
litellm = "^1.73.1"

[tool.poetry.extras]
# All optional extras removed - litellm handles all providers

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
deepeval = "^2.2.6"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
