[project]
name = "graphrag-sdk"
version = "0.8.2"
description = "Enables graph-based RAG and integration with LLMs for advanced querying and knowledge graph creation."
authors = [
    { name = "FalkorDB", email = "info@falkordb.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
keywords = ["RAG", "Graph-RAG", "KnowledgeGraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "falkordb>=1.0.9,<2.0.0",
    "typing-extensions>=4.12.1,<5.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "pypdf>=5.9.0,<7.0.0",
    "backoff>=2.2.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "ratelimit>=2.2.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "fix-busted-json>=0.0.18,<0.0.19",
    "rich>=13.9.4,<14.0.0",
    "litellm>=1.73.1,<2.0.0",
    "rdflib>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.1,<9.0.0",
    "deepeval>=2.2.6,<4.0.0",
]
dev = [
    "sphinx>=7.3.7,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<4.0.0",
    "pandas>=2.2.2,<3.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.29.5,<8.0.0",
]

[project.urls]
Homepage = "http://RAG-SDK.readthedocs.io"
Repository = "https://github.com/FalkorDB/GraphRAG-SDK"
Documentation = "http://RAG-SDK.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
