[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-sdk"
version = "2.0.0a1"
description = "GraphRAG SDK 2.0 — A modular, async-first Graph RAG framework for FalkorDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FalkorDB" }]
keywords = ["graphrag", "rag", "falkordb", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "falkordb>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
cohere = ["cohere>=5.0"]
sentence-transformers = ["sentence-transformers>=2.0"]
pdf = ["pypdf>=4.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "cohere>=5.0",
    "sentence-transformers>=2.0",
    "pypdf>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
