[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-sdk"
version = "2.0.0a1"
description = "The most accurate Graph RAG framework. Build knowledge graphs and query them with natural language. Built on FalkorDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FalkorDB", email = "support@falkordb.com" }]
keywords = ["graphrag", "rag", "falkordb", "knowledge-graph", "llm", "graph-database", "retrieval-augmented-generation", "nlp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "falkordb>=1.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "gliner>=0.2",
    "hnswlib>=0.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
cohere = ["cohere>=5.0"]
sentence-transformers = ["sentence-transformers>=2.0"]
pdf = ["pypdf>=5.0"]
litellm = ["litellm>=1.83.0"]
openrouter = ["openai>=1.0"]
fastcoref = ["fastcoref>=2.0"]
spacy = ["spacy>=3.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "cohere>=5.0",
    "sentence-transformers>=2.0",
    "pypdf>=5.0",
    "litellm>=1.83.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/FalkorDB/GraphRAG-SDK"
Documentation = "https://falkordb.github.io/GraphRAG-SDK/"
Repository = "https://github.com/FalkorDB/GraphRAG-SDK"
"Bug Tracker" = "https://github.com/FalkorDB/GraphRAG-SDK/issues"
Changelog = "https://github.com/FalkorDB/GraphRAG-SDK/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
