[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-sdk"
version = "1.0.0"
description = "GraphRAG SDK — A modular, async-first Graph RAG framework for FalkorDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FalkorDB", email = "support@falkordb.com" }]
keywords = ["graphrag", "rag", "falkordb", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "falkordb>=1.0,<2",
    "numpy>=1.24,<3",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "gliner>=0.2,<1",
    "hnswlib>=0.8",
    "scipy>=1.11,<2",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
cohere = ["cohere>=5.0"]
sentence-transformers = ["sentence-transformers>=2.0"]
pdf = ["pypdf>=6.9.2"]
# Optional faster/table-aware PDF backend. PyMuPDF is AGPL-3.0 — if that is
# incompatible with your project's license, stick with the default `pdf` extra.
pdf-fast = ["pymupdf>=1.24"]
litellm = ["litellm>=1.83.0"]
openrouter = ["openai>=1.0"]
fastcoref = ["fastcoref>=2.0"]
spacy = ["spacy>=3.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "cohere>=5.0",
    "sentence-transformers>=2.0",
    "pypdf>=6.9.2",
    "litellm>=1.83.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
